logs/Slang/chapter-6/6.19--enum_xx_inv.sv.log
name: enum_xx_inv
description: invalid enum with x tests
should_fail: 1
tags: 6.19
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-6/6.19--enum_xx_inv.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-6/6.19--enum_xx_inv.sv:8:25: error: redefinition of enum value 2'b0
	enum bit [1:0] {a=0, b=2'bxx, c=1} val;
	                       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-6/6.19--enum_xx_inv.sv:8:20: note: previous definition here
	enum bit [1:0] {a=0, b=2'bxx, c=1} val;
	                  ^
